--- a/src/index.css
+++ b/src/index.css
@@ -72,7 +72,7 @@ h1 {
 }
 
 section {
-  margin-top: 6rem;
+  margin-top: 4rem;
 }
 
 section > h2,
